--- a/Build a Palindrome Checker Project/index.html
+++ b/Build a Palindrome Checker Project/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Palindrome Checker</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +23,7 @@
         </button>
       </form>
     </div>
-    <div id="result">result</div>
+    <div id="result"></div>
     <script>
       src =
         "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js";
@@ -31,5 +31,6 @@
         "sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz";
       crossorigin = "anonymous";
     </script>
+    <script src="./script.js"></script>
   </body>
 </html>
