--- a/Roman Numeral Converter/index.html
+++ b/Roman Numeral Converter/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roman Numeral Converter</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -16,6 +16,6 @@
       <button type="submit" id="convert-btn">Enter</button>
     </div>
     <div id="output"></div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
