--- a/Build a Telephone Number Validator Project/index.html
+++ b/Build a Telephone Number Validator Project/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Telephone Number Validator</title>
+    <link href="styles.css" rel="stylesheets" />
     <script src="main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Telephone Number Validator</h1>
     <div>
-        <label for="user-input"> 
-            Enter a Phone Number
-        </label>
-        <input type="text" id="user-input">
-        <div id="results-div"></div>
-        <button id="check-btn">Check</button>
-        <button id="clear-btn">Clear</button>
+      <label for="user-input"> Enter a Phone Number </label>
+      <input type="text" id="user-input" />
+      <div id="results-div"></div>
+      <button id="check-btn">Check</button>
+      <button id="clear-btn">Clear</button>
     </div>
-</body>
+  </body>
 </html>
