--- a/Build a Telephone Number Validator Project/index.html
+++ b/Build a Telephone Number Validator Project/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Telephone Number Validator</title>
     <link href="styles.css" rel="stylesheets" />
-    <script src="main.js" defer></script>
   </head>
   <body>
     <h1>Telephone Number Validator</h1>
@@ -16,5 +15,6 @@
       <button id="check-btn">Check</button>
       <button id="clear-btn">Clear</button>
     </div>
+    <script src="./main.js"></script>
   </body>
 </html>
