--- a/Build a Telephone Number Validator Project/index.html
+++ b/Build a Telephone Number Validator Project/index.html
@@ -15,6 +15,7 @@
       <button id="check-btn">Check</button>
       <button id="clear-btn">Clear</button>
     </div>
+    <!-- <script src="main.js"></script> -->
     <script src="./main.js"></script>
   </body>
 </html>
